<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <!-- Text View with the time ran. -->
    <TextView
        android:id="@+id/timeRun"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:textSize="32sp"
        android:textStyle="bold"
        android:text="@string/time_run"/>

    <!-- Text View with the time ran title. -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="12sp"
        android:text="@string/time_run2"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <!-- Text View with the total distance ran. -->
        <TextView
            android:id="@+id/totDist"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            android:text="@string/tot_dist"/>

        <!-- Text View with the average speed. -->
        <TextView
            android:id="@+id/curSpeed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            android:text="@string/cur_speed"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Text View with the total distance ran title. -->
        <TextView
            android:id="@+id/totDist2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textSize="12sp"
            android:text="@string/tot_dist2"/>

        <!-- Text View with the average speed title. -->
        <TextView
            android:id="@+id/curSpeed2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textSize="12sp"
            android:text="@string/cur_speed2"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <!-- Text View with the minimum altitude. -->
        <TextView
            android:id="@+id/minAlt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            android:text="@string/min_alt"/>

        <!-- Text View with the current altitude. -->
        <TextView
            android:id="@+id/curAlt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            android:text="@string/cur_alt"/>

        <!-- Text View with the maximum altitude. -->
        <TextView
            android:id="@+id/maxAlt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            android:text="@string/max_alt"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Text View with the minimum altitude title. -->
        <TextView
            android:id="@+id/minAlt2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textSize="12sp"
            android:text="@string/min_alt2"/>

        <!-- Text View with the current altitude title. -->
        <TextView
            android:id="@+id/curAlt2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textSize="12sp"
            android:text="@string/cur_alt2"/>

        <!-- Text View with the maximum altitude title. -->
        <TextView
            android:id="@+id/maxAlt2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textSize="12sp"
            android:text="@string/max_alt2"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp">

        <!-- Button to start running -->
        <Button
            android:id="@+id/startBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:text="@string/start_btn" />

        <!-- Button to pause the run. -->
        <Button
            android:id="@+id/pauseBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:text="@string/pause_btn"/>

    </LinearLayout>

</LinearLayout>

