<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SavedRunActivity"
    android:orientation="vertical"
    android:background="?attr/backgroundcolor">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/cardbackground"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:titleTextColor="?attr/titlecolor"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <!-- Text View with the time ran. -->
    <TextView
        android:id="@+id/timeRun"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:textSize="32sp"
        android:textStyle="bold"
        android:text="@string/time_run"
        android:textColor="?attr/textcolor1"/>

    <!-- Text View with the time ran title. -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="12sp"
        android:text="@string/time_run2"
        android:textColor="?attr/textcolor2"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:background="?attr/backgroundcolor">

        <!-- Text View with the total distance ran. -->
        <TextView
            android:id="@+id/totDist"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            android:text="@string/tot_dist"
            android:textColor="?attr/textcolor1"/>

        <!-- Text View with the average speed. -->
        <TextView
            android:id="@+id/aveSpeed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            android:text="@string/ave_speed"
            android:textColor="?attr/textcolor1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="?attr/backgroundcolor">

        <!-- Text View with the total distance ran title. -->
        <TextView
            android:id="@+id/totDist2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textSize="12sp"
            android:text="@string/tot_dist2"
            android:textColor="?attr/textcolor2"/>

        <!-- Text View with the average speed title. -->
        <TextView
            android:id="@+id/aveSpeed2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textSize="12sp"
            android:text="@string/ave_speed2"
            android:textColor="?attr/textcolor2"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:background="?attr/backgroundcolor">

        <!-- Text View with the minimum altitude. -->
        <TextView
            android:id="@+id/minAlt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            android:text="@string/min_alt"
            android:textColor="?attr/textcolor1"/>

        <!-- Text View with the current altitude. -->
        <TextView
            android:id="@+id/aveAlt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            android:text="@string/ave_alt"
            android:textColor="?attr/textcolor1"/>

        <!-- Text View with the maximum altitude. -->
        <TextView
            android:id="@+id/maxAlt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            android:text="@string/max_alt"
            android:textColor="?attr/textcolor1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="?attr/backgroundcolor">

        <!-- Text View with the minimum altitude title. -->
        <TextView
            android:id="@+id/minAlt2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textSize="12sp"
            android:text="@string/min_alt2"
            android:textColor="?attr/textcolor2"/>

        <!-- Text View with the current altitude title. -->
        <TextView
            android:id="@+id/aveAlt2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textSize="12sp"
            android:text="@string/ave_alt2"
            android:textColor="?attr/textcolor2"/>

        <!-- Text View with the maximum altitude title. -->
        <TextView
            android:id="@+id/maxAlt2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textSize="12sp"
            android:text="@string/max_alt2"
            android:textColor="?attr/textcolor2"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:background="?attr/backgroundcolor">

    <com.example.trailxplorer.GraphView
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

</LinearLayout>